fixing dark mode

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -692,7 +692,7 @@ a.pill-focus-reset:focus-visible {
 
 .combobox {
   position: relative;
-  @apply text-black dark:text-white;
+  @apply text-slate-900 dark:text-white;
 
   input {
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' aria-hidden='true' viewBox='0 0 10 6'%3E%3Cpath stroke='%236B7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m1 1 4 4 4-4'/%3E%3C/svg%3E");
@@ -706,11 +706,8 @@ a.pill-focus-reset:focus-visible {
     cursor: pointer;
     width: 100%;
     outline: none;
-    font-size: inherit;
-    line-height: inherit;
     padding: 0.5rem 0.75rem;
-    background-color: white;
-    @apply rounded-lg border border-slate-300 text-sm dark:border-slate-600;
+    @apply rounded-lg border border-slate-300 dark:border-slate-600 dark:bg-slate-800;
   }
 
   input[aria-invalid="true"] {
@@ -718,16 +715,15 @@ a.pill-focus-reset:focus-visible {
   }
 
   input:focus-visible {
-    @apply outline-3 outline-offset-2 outline-black dark:outline-white;
     box-shadow: none !important;
     outline-style: solid;
+    @apply outline-3 outline-offset-2 outline-black dark:outline-white;
   }
 
   input[aria-invalid="true"]:focus-visible {
-    @apply outline-3 outline-offset-2 outline-black dark:outline-white;
     box-shadow: none !important;
     outline-style: solid;
-    @apply outline-red-700 dark:outline-red-400;
+    @apply outline-3 outline-offset-2 outline-red-700 dark:outline-red-400;
   }
 
   [role="listbox"] {
@@ -736,20 +732,19 @@ a.pill-focus-reset:focus-visible {
     position: absolute;
     top: 100%;
     list-style: none;
-    background-color: white;
     display: none;
     box-sizing: border-box;
-    border: 0.1px black solid;
     max-height: 250px;
     width: 100%;
     overflow: hidden auto;
     font-size: inherit;
     line-height: inherit;
     z-index: 10;
+    @apply border border-slate-500 bg-white dark:border-slate-600 dark:bg-slate-800;
   }
 
   [role="listbox"] > [role="group"] {
-    border-top: 1px black solid;
+    @apply border-t border-slate-500 dark:border-slate-600;
   }
 
   [role="listbox"] > [role="group"] > [role="presentation"] {
@@ -768,6 +763,6 @@ a.pill-focus-reset:focus-visible {
 
   [role="option"][aria-selected="true"],
   [role="option"]:hover {
-    background-color: #f5f5f5;
+    @apply bg-blue-800/80 text-white dark:bg-blue-600/50;
   }
 }
